2007-09-06  Tobias Koenig  <tokoe@kde.org>

  Refactored HttpDownloadManager and HttpFetchFile by introducing
	StoragePolicy.

	Fixed the TinyHttpBrowser to show images and load style sheets.

2007-09-05  Tobias Koenig  <tokoe@kde.org>

  Add DiscCache class

2007-09-05  Tobias Koenig  <tokoe@kde.org>

	KPartified Marble.

2007-09-05  Inge Wallin  <inge@lysator.liu.se>

	Simplify code.
	* src/lib/PlaceMarkPainter.cpp (*PaintPlaceFolder): Simplify code
	structure.

2007-09-03  Torsten Rahn  <rahn@kde.org>

	- "Fixed" last "jump" issue in the flat projection. 
	- Tidied up the naming of the euler angles a but
	- "Fixed" issue in the plain map which made the 
	  ocean water not being in sync with the rest.
	Well, all this needs to be tidied up, still.

	* src/lib/MeasureTool.cpp
	* src/lib/MarbleWidget.cpp
	* src/lib/Quaternion.cpp
	* src/lib/PlaceMarkPainter.cpp
	* src/lib/VectorMap.cpp
	* src/lib/TextureColorizer.cpp
	* src/lib/VectorMap.h
	* src/lib/VectorComposer.cpp
	* src/lib/GridMap.cpp
	* src/lib/MarbleWidgetInputHandler.cpp
	* src/lib/FlatScanlineTextureMapper.cpp

2007-09-02  Torsten Rahn  <rahn@kde.org>

	- Fixed "jumpy" flat projection. Still needs work to 
	  fix the "jump" for the case where the centerLat
	  exceeds +/- M_PI which has other causes:

	* MeasureTool.cpp
	* MarbleWidget.cpp
	* Quaternion.cpp
	* PlaceMarkPainter.cpp
	* VectorMap.cpp
	* TextureColorizer.cpp
	* GridMap.cpp
	* MarbleWidgetInputHandler.cpp
	* FlatScanlineTextureMapper.cpp

	* TileCreator.cpp:
	- More fixes for non-standard source texture sizes

2007-09-01  Inge Wallin  <inge@lysator.liu.se>

	Krazy issue 22: spelling errors	* src/lib/AbstractLayer/AbstractLayerContainer.h: fix spelling
	* src/lib/kml/KMLStyleParser.cpp (startElement): fix spelling

	Krazy issue 21: signals and slots
	* src/lib/PlaceMarkManager.h (class PlaceMarkManager): signals ->
	Q_SIGNALS

	Krazy issue 13: proper include directives
	* src/lib/gps/GpxFile.cpp: Own include file first and dupl. includes